# knowledge

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  knowledge-policy.yml  knowledge.config.yml  pyproject.toml
.github/workflows/: enrich.yml  ingest.yml  validate.yml
docs/plans/: 2026-06-17T09-46-01Z-make-as215932-knowledge-useful-llm-enriched-source-cited-okf-tranche.md  2026-06-23-knowledge-loop-agent-phases.md
evals/: README.md
evals/schemas/: eval-case.schema.json
exports/: claims.jsonl  concepts.jsonl  edges.jsonl  enrichment-runs.jsonl  eval-cases.jsonl  eval-results.jsonl  knowledge.sqlite  learning-events.jsonl  manifest.json  observations.jsonl  quality.jsonl  sources.jsonl
ledger/: README.md
ledger/fixtures/: 01-context_pack_used.json  02-engineering_loop_run_summary.json  03-noc_shadow_eval_summary.json  04-eval_run_summary.json
ledger/proposed/: README.md
ledger/reviews/: README.md
okf/: index.md  log.md
okf/curated/: index.md
okf/observed/: index.md  log.md
reports/: coverage.json  coverage.md  eval-cases.jsonl  evals.json  evals.jsonl  evals.md  learning-ledger.json  learning-ledger.jsonl  learning-ledger.md  learning-lifecycle.json  learning-lifecycle.md  quality.json  quality.jsonl  retrieval-evals.md  shallow-concepts.md
schema/: claim.schema.json  context-pack.schema.json  frontmatter.schema.json  learning-event.schema.json  learning-review.schema.json  policy-decision.schema.json  sqlite-schema.sql
src/hyrule_knowledge/: __init__.py  agent_core_trace.py  authority.py  builder.py  claims.py  cli.py  config.py  context_pack.py  contracts.py  enrich.py  evals.py  exporter.py  (+15 more)
tests/: test_agent_core_trace.py  test_claims.py  test_control_plane.py  test_exporter.py  test_knowledge_loop.py  test_learning_ledger.py  test_learning_promotion.py  test_learning_workflow.py  test_mcp_server.py  test_okf_tooling.py  test_useful_tranche.py
(+86 files in other folders)
