[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hyrule-knowledge"
version = "0.1.0"
description = "Deterministic OKF knowledge catalog generator for AS215932"
requires-python = ">=3.12"
dependencies = [
    "PyYAML>=6.0.2",
]

[project.scripts]
hyrule-knowledge = "hyrule_knowledge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hyrule_knowledge"]

[dependency-groups]
dev = [
    "mypy>=1.11",
    "pytest>=8",
    "ruff>=0.6",
    "types-PyYAML>=6.0.12",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
