[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hyrule-knowledge"
version = "0.1.0"
description = "OKF knowledge catalog, enrichment, quality, and observation tooling for AS215932"
requires-python = ">=3.12"
dependencies = [
    "PyYAML>=6.0.2",
    "agent-core",
]

[project.optional-dependencies]
mcp = ["mcp>=1.27.0"]

[project.scripts]
hyrule-knowledge = "hyrule_knowledge.cli:main"
hyrule-knowledge-mcp = "hyrule_knowledge.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hyrule_knowledge"]

[dependency-groups]
dev = [
    "mcp>=1.27.0",
    "mypy>=1.11",
    "pytest>=8",
    "ruff>=0.6",
    "types-PyYAML>=6.0.12",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
agent-core = { git = "https://github.com/AS215932/agent-core", tag = "v0.5.0" }
